--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="geral.css">
+    <title>Terceiro Trimestre</title>
+    <script src="estudo.js"></script>
+</head>
+<body>
+    <h1>Terceiro Trimestre</h1>
+</body>
+</html>
