--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="geral.css">
     <title>Terceiro Trimestre</title>
+    <link rel="stylesheet" href="geral.css">
     <script src="estudo.js"></script>
 </head>
 <body>
     <h1>Terceiro Trimestre</h1>
-    <button onclick="meChame()">Clique Aqui</button>
+    <button onclick="minhaTabuada()">Tabuada</button>
+    <button onclick="quadrado()">Quadrado</button>
 </body>
 </html>
+
+
 
