--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="estudo.js"></script>
 </head>
 <body>
-    <h1>Terceiro Trimestre</h1>
-    <button onclick="minhaTabuada()">Tabuada</button>
-    <button onclick="quadrado()">Quadrado</button>
+  Valor: <input id="valor" type="text"> <br>
+  Juros: <input id="juros" type="text"> <br>
+ <button onclick="total()"> Ok </button>
 </body>
 </html>
 
