--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-
+    <input type="checkbox"  id="calcFin">
     <div class="calculadora">
+    <label for="calcFin"><h3>Financeira</h3></label>
+    <div class="calcF">
+
 
         <div class="spTotal">
             <span id="total">Total: 0,00</span> <br>
@@ -29,7 +32,7 @@
      <div class="spListaMes">
          <span id="listaMes">Meses</span>
      </div>
-    
+    </div>
     </div>
    
 
